--- a/src/Components/SkillStatisticBox/SkillStatisticBox.css
+++ b/src/Components/SkillStatisticBox/SkillStatisticBox.css
@@ -1,11 +1,11 @@
 
 
     /* Skill label */
-    .skill-label {
+    /* .skill-label {
       margin-top: 10px;
       color: white;
       font-size: 16px;
-    }
+    } */
 
 .skillCircle {
       height: 12rem;
