--- a/src/Components/ProjectPoster/ProjectPoster.css
+++ b/src/Components/ProjectPoster/ProjectPoster.css
@@ -55,7 +55,7 @@ span{
 .project-nav {
   height: 100%;
   width: 100%;
-  background: rgb(11 18 36);
+  background: rgb(11 18 36 / 48%);
   position: absolute;
   top: 0;
   left: -100%;
@@ -63,10 +63,11 @@ span{
   justify-content: center;
   align-items: center;
   column-gap: 2rem;
-transition: 1s all ease-in;
-transition-property: left;
-transition-timing-function: cubic-bezier(.4,0,.2,1);
-transition-duration: .5s;
+  transition: 1s all ease-in;
+  transition-property: left;
+  transition-timing-function: cubic-bezier(.4,0,.2,1);
+  transition-duration: .5s;
+  backdrop-filter: blur(5px);
 a{
 
     background: #72E2AE;
